exports[`test renders correctly when position is bottom 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": 0.5,
        "position": "absolute",
        "top": 959.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is bottomLeft 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": -374.5,
        "position": "absolute",
        "top": 959.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is bottomRight 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": 375.5,
        "position": "absolute",
        "top": 959.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is center 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": 0.5,
        "position": "absolute",
        "top": 292.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is custom 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": -274.5,
        "position": "absolute",
        "top": -274.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is left 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": -374.5,
        "position": "absolute",
        "top": 292.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is right 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": 375.5,
        "position": "absolute",
        "top": 292.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is top 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": 0.5,
        "position": "absolute",
        "top": -374.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is topLeft 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": -374.5,
        "position": "absolute",
        "top": -374.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;

exports[`test renders correctly when position is topRight 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "backgroundColor": "orange",
        "borderRadius": 374.5,
        "height": 749,
        "left": 375.5,
        "position": "absolute",
        "top": -374.5,
        "transform": Array [
          Object {
            "scale": 0,
          },
        ],
        "width": 749,
      }
    } />
</Modal>
`;
